# mini-redis-rpc

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yaml
examples/: test.rs
src/: db.rs  lib.rs  server.rs
src/idl/: redis.thrift
